lib_LTLIBRARIES = \
  libogmrip-drive.la

libogmrip_drive_la_SOURCES = \
  ogmrip-drive-device.c  \
  ogmrip-drive-object.c  \
  ogmrip-drive-monitor.c \
  ogmrip-drive-transport.c

libogmrip_drive_la_HEADERS = \
  ogmrip-drive-object.h \
  ogmrip-drive-monitor.h \
  ogmrip-drive.h

libogmrip_drive_la_LDFLAGS = \
  -version-info $(OGMRIP_MEDIA_LT_VERSION)

libogmrip_drive_ladir = \
  $(includedir)/ogmrip-drive

EXTRA_DIST = \
  ogmrip-drive-device.h \
  ogmrip-drive-transport.h

