lib_LTLIBRARIES = \
  libogmrip-media.la

libogmrip_media_la_SOURCES = \
  ogmrip-media-labels.c \
  ogmrip-media-time.c

libogmrip_media_la_HEADERS = \
  ogmrip-media-enums.h     \
  ogmrip-media-labels.h    \
  ogmrip-media-time.h      \
  ogmrip-media.h

libogmrip_media_la_LDFLAGS = \
  -version-info $(OGMDVD_LT_VERSION)

libogmrip_media_ladir = \
  $(includedir)/ogmrip-media

