lib_LTLIBRARIES = \
  libogmrip-media.la

libogmrip_media_la_SOURCES = \
  ogmrip-media-audio.c  \
  ogmrip-media-labels.c \
  ogmrip-media-object.c \
  ogmrip-media-stream.c \
  ogmrip-media-subp.c   \
  ogmrip-media-time.c   \
  ogmrip-media-title.c  \
  ogmrip-media-video.c

libogmrip_media_la_HEADERS = \
  ogmrip-media-audio.h  \
  ogmrip-media-enums.h  \
  ogmrip-media-labels.h \
  ogmrip-media-object.h \
  ogmrip-media-stream.h \
  ogmrip-media-subp.h   \
  ogmrip-media-time.h   \
  ogmrip-media-title.h  \
  ogmrip-media-types.h  \
  ogmrip-media-video.h  \
  ogmrip-media.h

libogmrip_media_la_LDFLAGS = \
  -version-info $(OGMDVD_LT_VERSION)

libogmrip_media_ladir = \
  $(includedir)/ogmrip-media

